--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,7 +40,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, role: PUBLIC_ACCESS }
-        - { path: ^/, role: ROLE_ADMIN}
+        - { path: ^/, role: ROLE_USER}
         
 
 when@test:
